--- a/src/components/TagSidebar.astro
+++ b/src/components/TagSidebar.astro
@@ -70,8 +70,8 @@ const tags = Array.from(tagMap.entries()).sort((a, b) => b[1] - a[1]);
 }
 @media (min-width: 900px) {
   .tag-sidebar {
-    width: 20vw;
-    max-width: 20vw;
+    width: auto;
+    max-width: none;
     min-width: 12em;
   }
 }
