--- a/src/pages/article/index.astro
+++ b/src/pages/article/index.astro
@@ -46,10 +46,10 @@ const filteredPosts = searchFilter ? posts.filter(post => post.data.tags && post
     <Header />
     {kEnableSearch && <Search />}
     <main style="display: flex; gap: 2.5em; align-items: flex-start;">
-      <div style="flex: 1 1 20%; min-width: 14em; max-width: 18em;">
+      <div style="flex: 1 1 0; min-width: 12em; order: 2;">
         <TagSidebar />
       </div>
-      <div style="flex: 3 1 0; min-width: 0;">
+      <div style="flex: 5 1 0; min-width: 0; order: 1;">
         <section>
           <ul class={`accent block-list posts${kEnableSearch ? " loading" : ""}`}>
             {
